--- a/Unity/RenaissanceCodersExample/.gitignore
+++ b/Unity/RenaissanceCodersExample/.gitignore
@@ -1,13 +1,13 @@
 ###
 # Unity folders and files
 ###
-#Assets/AssetStoreTools
-#[Bb]uild/
-#[Ll]ibrary/
-#[Ll]ocal[Cc]ache/
-#[Oo]bj/
-#[Tt]emp/
-#[Uu]nityGenerated/
+Assets/AssetStoreTools
+[Bb]uild/
+[Ll]ibrary/
+[Ll]ocal[Cc]ache/
+[Oo]bj/
+[Tt]emp/
+[Uu]nityGenerated/
 # file on crash reports
 #sysinfo.txt
 # Unity3D generated meta files
