--- a/Unity/RenaissanceCodersExample/.gitignore
+++ b/Unity/RenaissanceCodersExample/.gitignore
@@ -5,9 +5,12 @@ Assets/AssetStoreTools
 [Bb]uild/
 [Ll]ibrary/
 [Ll]ocal[Cc]ache/
+[Ll]ogs/
+[Pp]rojectSettings/
 [Oo]bj/
 [Tt]emp/
 [Uu]nityGenerated/
+[Uu]serSettings/
 # file on crash reports
 #sysinfo.txt
 # Unity3D generated meta files
